2009-03-10  Ulrich Drepper  <drepper@redhat.com>

	* time/tzset.c: Optimize a bit for size.

2009-03-10  Jakub Jelinek  <jakub@redhat.com>

	* include/stdio.h (fmemopen): Add libc_hidden_proto.
	* libio/fmemopen.c (fmemopen): Add libc_hidden_def.

	* elf/sprof.c: Avoid warning about multi-line comment.

2009-03-10  Ulrich Drepper  <drepper@redhat.com>

	* time/tzset.c (__tzset_parse_tz): Use correct string when parsing
	DST name.
	* time/tst-posixtz.c: Add tests for quoted timezone names.

2009-03-10  Jakub Jelinek  <jakub@redhat.com>

	* posix/unistd.h (_POSIX_VERSION, _POSIX2_VERSION, _POSIX2_C_BIND,
	_POSIX2_C_DEV, _POSIX2_SW_DEV, _POSIX2_LOCALEDEF): Define to
	200809L instead of 200112L.
	(_XOPEN_VERSION): For __USE_XOPEN2K8 define to 700.
	* posix/tst-sysconf.c (STDVER): Define to 200809L instead of 200112L.

	* stdlib/quick_exit.c (quick_exit): Pass &__quick_exit_funcs
	instead of __quick_exit_funcs to __run_exit_handlers.
	* stdlib/at_quick_exit.c (at_quick_exit): Add attribute_hidden.
	* stdlib/exit.h (__run_exit_handlers): Add noreturn attribute.
	(__cxa_at_quick_exit): Remove attribute_hidden.
	* stdlib/exit.c (exit): Pass &__exit_funcs instead of __exit_funcs
	to __run_exit_handlers.
	* stdlib/cxa_at_quick_exit.c (__cxa_at_quick_exit): Remove
	attribute_hidden.

2009-03-10  Ulrich Drepper  <drepper@redhat.com>

	* po/id.po: Update from translation team.

2009-02-18  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/setcontext.S: Use
	.machine push; .machine "power6" and .machine pop around mtfsf
	insns outside of _ARCH_PWR6 define.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/swapcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/setcontext-common.S:
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/swapcontext-common.S:
	Likewise.
	* sysdeps/powerpc/fpu/tst-setcontext-fpscr.c (_SET_DI_FPSCR): Likewise.
	* sysdeps/powerpc/fpu/fenv_libc.h (fesetenv_register,
	relax_fenv_state): Likewise.
